Commit - 247 Add CRUD Scaffolding

--- a/SalesMebProject/appsettings.json
+++ b/SalesMebProject/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesMebProjectContext": "Server=(localdb)\\mssqllocaldb;Database=SalesMebProjectContext-6817cf93-9bff-4e91-b6f1-e3f5f2b4c5bc;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
