Commit 249 ADD Migration to MySQL

--- a/SalesMebProject/appsettings.json
+++ b/SalesMebProject/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesMebProjectContext": "Server=(localdb)\\mssqllocaldb;Database=SalesMebProjectContext-6817cf93-9bff-4e91-b6f1-e3f5f2b4c5bc;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesMebProjectContext": "server=localhost;userid=developer;password=1234567;database=saleswebmvcappdb"
   }
 }
